# aep_rag

./: .env  PROGRAM_FLOW_AUDIT.md  README.md  batch_evaluation.py  batch_evaluation_results.json  batch_evaluation_results_basic.json  batch_evaluation_results_filter.json  batch_evaluation_results_model.json  batch_evaluation_results_rerank.json  batch_evaluation_results_rewrite.json  config.py  cse.py  evaluation.json  evaluation_report.txt  evaluation_statistics.py  examples.py  main.blg  main.py  mean.py  pipeline.py  pyproject.toml  questions.json  questions_evaluation.json  random_questions.json  utils.py  vector_stores.py
document_store/: index.pkl
results/: evaluation_results.json
split_vector_store/: index.pkl
templates/: prompts.py  titles.py
vector_store/: index.faiss  index.pkl
