[project]
name = "rag-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.10.0",
    "huggingface-hub>=0.29.3",
    "langchain-google-genai>=2.1.2",
    "langchain-huggingface>=0.1.2",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.4.1",
]

[tool.mypy]
ignore_missing_imports = true
